References insertion and small corrections.

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -9,7 +9,7 @@
 \usepackage{amsmath,amsfonts,graphicx}
 \usepackage{beamerleanprogress}
 \usepackage{hyperref}
-\usepackage{listings}	
+\usepackage{listings}   
 \usepackage{adjustbox}
 \usepackage{ragged2e}
 
@@ -17,13 +17,13 @@
 
 \newcommand{\introframe}[2]{
     \begin{frame}
-	   \vfill
-	   \hfill\Huge{#1}
-	   
-	   \vspace{1em}
-	   
-	   \hfill\Large{#2}
-	   \vfill
+       \vfill
+       \hfill\Huge{#1}
+       
+       \vspace{1em}
+       
+       \hfill\Large{#2}
+       \vfill
     \end{frame}
 }
 
@@ -58,14 +58,14 @@
 
     \maketitle
 
-	\introframe{Introduction}{What is it and why use it?}
-	
-	\begin{frame}{Artificial Immune Systems}
+    \introframe{Introduction}{What is it and why use it?}
+    
+    \begin{frame}{Artificial Immune Systems}
         \textbf{What are they?}
         
         \begin{itemize}
             \item AIS is the product of Immune Engineering;
-				\item Immune Engineering develops models that are inspired by the Immune System;
+                \item Immune Engineering develops models that are inspired by the Immune System;
             \item Multiple models of the Immune System serve as  metaphors to solve different kinds of problems.
         \end{itemize}        
     \end{frame}
@@ -77,24 +77,24 @@
             \item AIS is not supposed to be a computational reconstruction of the immune system;
             \item Evolutionary Algorithms (although they can be used within AIS)
         \end{itemize}    
-	\end{frame}
-    	
+    \end{frame}
+        
         \begin{frame}{Artificial Immune Systems}
             \only<1>{\textbf{How can we apply AIS?}}
             \only<2>{\textbf{It even reaches outside Computer Science.}}
-        	\begin{itemize}
+            \begin{itemize}
                 \only<1>{\item We use the Immune System as a metaphor to solve problems;
                 \item There are many theories behind the Immune System;
                 \item Depending on the theory, different applications may ensue, \textit{e.g.} Information Security, Anomaly Detection, Pattern Recognition, Data Mining, Machine Learning.}
-			    \only<2>{
+                \only<2>{
                     \item We use the immune system as a metaphor to solve problems.
-    			    \item Computer Engineers try to reproduce the immune system for computer security.
-    				\item Immunologists use computational models and mathematics to understand how the immune system works.}
-         	\end{itemize}
-    	\end{frame}
-	
-	\introframe{Immunology Basics}{Straight from the Natural World}
-	
+                    \item Computer Engineers try to reproduce the immune system for computer security.
+                    \item Immunologists use computational models and mathematics to understand how the immune system works.}
+            \end{itemize}
+        \end{frame}
+    
+    \introframe{Immunology Basics}{Straight from the Natural World}
+    
         \begin{frame}{The Natural Immune System}        
             \begin{itemize}
                 \item Innate Immune System
@@ -109,21 +109,21 @@
                     \item Present in vertebrates only.
                 \end{itemize}
             \end{itemize}
-	    \end{frame}
+        \end{frame}
         
         \begin{frame}{Immunology Basics}
             A few important types of cells to keep in mind:
             \vspace{1em}
             % SC: I see no reason why we should take 9 slides just to show this hierarchy
             % SC: In fact, I see not reason why we should introduce this hierarchy at all. AIS abstracts all of these.
-        	\begin{itemize}
-        	    \item Leukocytes (from the Innate IS)
+            \begin{itemize}
+                \item Leukocytes (from the Innate IS)
                 \item B-Cells (makes Memory cells)
-            	\item T-Cells (activate immune responses)
-         	\end{itemize}
-    	\end{frame}
+                \item T-Cells (activate immune responses)
+            \end{itemize}
+        \end{frame}
 
-%    	\begin{frame}{Immunology Basics}
+%       \begin{frame}{Immunology Basics}
 %            \textbf{B-Cells}
 %            \vspace{1em}
 %            \begin{itemize}
@@ -145,11 +145,11 @@
 %              \only<1>{\item Originated in the bone marrow
 %              % SC: All cells are originated in the bone marrow, the difference is that B-cells are already matured by the time they exit the bone marrow, whereas T-Cells are sent to the Thymus for maturation via negative selection.
 %              \item Matured in the Thymus
-%          	  \item Captures signals from B-Cells' receptors
-%          	  \item Helps B-Cells differentiate}
+%             \item Captures signals from B-Cells' receptors
+%             \item Helps B-Cells differentiate}
 %              \only<2>{\item Reacts to viruses and tumour cells
-%          	  \item Suppress other auto-reactive immune cells
-%          	  \item Takes care of lingering infection elements}
+%             \item Suppress other auto-reactive immune cells
+%             \item Takes care of lingering infection elements}
 %          \end{itemize}
 %        \end{frame}
                          
@@ -230,7 +230,7 @@
             \end{itemize}
         \end{frame}
 
-		\begin{frame}{Encoding}
+        \begin{frame}{Encoding}
             
             \textbf{Encoding is the task of translating shape-spaces to computation form.}
             
@@ -238,14 +238,14 @@
             The most general way to do so is with \textbf{data structures}:
             
             \vspace{0.5em}
-        	
-			\begin{center}
-				$\begin{array}{ll}
-					Ag = \langle Ag_1,Ag_2,Ag_3,...,Ag_L \rangle \cr
-					Ab = \langle Ab_1,Ab_2,Ab_3,...,Ab_L \rangle \cr
+            
+            \begin{center}
+                $\begin{array}{ll}
+                    Ag = \langle Ag_1,Ag_2,Ag_3,...,Ag_L \rangle \cr
+                    Ab = \langle Ab_1,Ab_2,Ab_3,...,Ab_L \rangle \cr
                  \end{array}$
             \end{center}            
-		\end{frame}
+        \end{frame}
         
         \begin{frame}{Encoding}
             
@@ -256,38 +256,38 @@
             \vspace{0.5em}
             
             \begin{itemize}
-            	\item Binary;
+                \item Binary;
                 \begin{itemize}
-					\item $Ag = \langle 0,1,0,0,1,0,1 \rangle$
-				\end{itemize}
+                    \item $Ag = \langle 0,1,0,0,1,0,1 \rangle$
+                \end{itemize}
                 \vspace{0.3em}
-				\item Integer;
-               	\begin{itemize}
-					\item $Ag = \langle 0, 20, 4, 5, 5, 12 \rangle$
-				\end{itemize}
+                \item Integer;
+                \begin{itemize}
+                    \item $Ag = \langle 0, 20, 4, 5, 5, 12 \rangle$
+                \end{itemize}
                 \vspace{0.3em}                
                 \item Real valued;
                 \begin{itemize}
-					\item $Ag = \langle 8.2, 7.7, 2.2, 4.8 \rangle$
-				\end{itemize}
+                    \item $Ag = \langle 8.2, 7.7, 2.2, 4.8 \rangle$
+                \end{itemize}
                 \item Symbolic
                 \begin{itemize}
-					\item $Ag = \langle \langle age, 20 \rangle, \langle height, 1.7\rangle , \langle eyes,``Brown''\rangle \rangle$
-				\end{itemize}
-			\end{itemize}
+                    \item $Ag = \langle \langle age, 20 \rangle, \langle height, 1.7\rangle , \langle eyes,``Brown''\rangle \rangle$
+                \end{itemize}
+            \end{itemize}
             
-		\end{frame}
+        \end{frame}
         
         \begin{frame}{Encoding}
             \begin{itemize}
-	            \item Shape-spaces contain the most important features of a molecule;
-	            \vspace{1em}
-	            \item These determine the characteristics we want antibodies to match in antigens.
-			\end{itemize}
-		\end{frame}
+                \item Shape-spaces contain the most important features of a molecule;
+                \vspace{1em}
+                \item These determine the characteristics we want antibodies to match in antigens.
+            \end{itemize}
+        \end{frame}
       
-      	\begin{frame}{Example}
-      	
+        \begin{frame}{Example}
+        
 %            In pattern recognition applications, the encoding of antibodies can be a string containing the pattern recognised by those antibodies, while antigens contain the patterns that we want to be recognised.
             
             \begin{itemize}
@@ -297,62 +297,62 @@
             \end{itemize}            
             \vspace{1em}
             
-            $$Ab = \langle 0, 1, 1, 0, 1, 0, 0, 0 \rangle$$
-            $$Ag_{1} = \langle 0, 1, 0, 0, 1, 0, 0, 0 \rangle$$
-            $$Ag_{2} = \langle 0, 1, 1, 0, 1, 1, 1, 1 \rangle$$
+            $$Ag = \langle 0, 1, 1, 0, 1, 0, 0, 0 \rangle$$
+            $$Ab_{1} = \langle 0, 1, 0, 0, 1, 0, 0, 0 \rangle$$
+            $$Ab_{2} = \langle 0, 1, 1, 0, 1, 1, 1, 1 \rangle$$
             
             
-		\end{frame}
+        \end{frame}
       
         \begin{frame}{Similarity}            
-        	
-        	\textbf{Similarity} is the product of the recognition of patterns by antibodies.
-        	\vspace{1em}
+            
+            \textbf{Similarity} is the product of the recognition of patterns by antibodies.
+            \vspace{1em}
             \begin{itemize}
-				\item We define it by means of an affinity measure, which is a product of:
+                \item We define it by means of an affinity measure, which is a product of:
                 \begin{itemize}
                     \item Shape complementarity (longer distances) ; or % Longer distance is better
                     \item Raw similarity (shorter distances) % Shorter distance is better
                 \end{itemize}
-				\vspace{0.5em}
-				\begin{itemize}
-					\item Both represented by a function $f(x,y): \vec{S}_1 \times \vec{S}_2 \rightarrow \mathbb{R}^+$
-				\end{itemize}
-        	\end{itemize}    
+                \vspace{0.5em}
+                \begin{itemize}
+                    \item Both represented by a function $f(x,y): \vec{S}_1 \times \vec{S}_2 \rightarrow \mathbb{R}^+$
+                \end{itemize}
+            \end{itemize}    
         \end{frame}
-		
+        
         \begin{frame}{Evaluating Interactions}
-			
+            
             \only<1-2,8->{Whatever the case, we use general distance measures to calculate the affinity between two molecules, such as:
             
             \vspace{0.5em}}
             
             \begin{itemize}
-				\only<1>{\item For Real-valued encodings:}
+                \only<1>{\item For Real-valued encodings:}
                 \only<2>{\item For Hamming encodings:}
                 \only<3>{\item \textit{r}-contiguous bits:}
                 \only<4-7>{\item \textit{r}-chunks:}
                 \only<8->{\item For binary encodings:}
-			\end{itemize}
+            \end{itemize}
 
-			\centering
+            \centering
             \only<1>{
-            	% SC: EuclidEan, not EuclidIan...
+                % SC: EuclidEan, not EuclidIan...
                 Euclidean distance: $D = \sqrt{\sum_{i=1}^{L}(Ab_i - Ag_i)^2)}$\\
                 \vspace{1em}
-            	Manhattan distance: $D = \sum_{i=1}^{L}\left | Ab_i - Ag_i \right |$
+                Manhattan distance: $D = \sum_{i=1}^{L}\left | Ab_i - Ag_i \right |$
             }
             \only<2>{
-	            Hamming distance: $D = \sum_{i=1}^{L} \delta_i,$ $where$ $\delta_i =
-                	\begin{cases}
-                    	1 & \text{if $Ab_i \neq Ag_i$}\\
+                Hamming distance: $D = \sum_{i=1}^{L} \delta_i,$ $where$ $\delta_i =
+                    \begin{cases}
+                        1 & \text{if $Ab_i \neq Ag_i$}\\
                         0 & \text{otherwise}                        
-					\end{cases}
-				$
-     		}
-     		
-     		\only<3>{
-	            $ Ag = [A, B, B, B, C, A, A, B, C, C]$\\\vspace{0.25em}
+                    \end{cases}
+                $
+            }
+            
+            \only<3>{
+                $ Ag = [A, B, B, B, C, A, A, B, C, C]$\\\vspace{0.25em}
                 $ Ab = [A, C, B, B, A, C, A, B, C, C]$\\\vspace{0.25em}
                 $Match(Ab, Ag): [1, 0, 1, 1, 0, 0, 1, 1, 1, 1]$\\\vspace{0.25em}}
                 
@@ -363,37 +363,37 @@
                 $ Ab_{1} = [A, C, B, B, A, C, A, B, C, C]$\\\vspace{0.25em}
                 $ Ab_{2} = [C, A, A, C, B, A, B, A, C, C]$\\\vspace{0.25em}
                 $ Ab_{3} = [B, A, A, A, C, C, B, A, C, C]$
-     		}
-     		
-     		\only<5>{
+            }
+            
+            \only<5>{
                 
                 $ Ag = [A, B, B, B, C, A, A, B, C, C]$\\\vspace{0.25em}
                 $ c_{1} = [C, A, A] $, $c_{2} = [A, B, C]$ \\\vspace{0.25em}
                 $ Ab_{1} = [A, C, B, B, A, C, A, B, C, C]$ \checkmark \\\vspace{0.25em}
                 $ Ab_{2} = [B, A, A, A, C, C, B, A, C, C]$
                 $ Ab_{3} = [C, A, A, C, B, A, B, A, C, C]$\\\vspace{0.25em}
-     		}
-     		
-     		\only<6>{
+            }
+            
+            \only<6>{
                 
                 $ Ag = [A, B, B, B, C, A, A, B, C, C]$\\\vspace{0.25em}
                 $ c_{1} = [C, A, A] $, $c_{2} = [A, B, C]$ \\\vspace{0.25em}
                 $ Ab_{1} = [A, C, B, B, A, C, A, B, C, C]$ \checkmark \\\vspace{0.25em}
-                $ Ab_{2} = [B, A, A, A, C, C, B, A, C, C]$
-                $ Ab_{3} = [C, A, A, C, B, A, B, A, C, C]$ \checkmark  \\\vspace{0.25em}
-     		}
-     		
-     		\only<7>{
+                $ Ab_{2} = [B, A, A, A, C, C, B, A, C, C]$ $\times$
+                $ Ab_{3} = [C, A, A, C, B, A, B, A, C, C]$ 
+            }
+            
+            \only<7>{
                 
                 $ Ag = [A, B, B, B, C, A, A, B, C, C]$\\\vspace{0.25em}
                 $ c_{1} = [C, A, A] $, $c_{2} = [A, B, C]$ \\\vspace{0.25em}
                 $ Ab_{1} = [A, C, B, B, A, C, A, B, C, C]$ \checkmark \\\vspace{0.25em}
                 $ Ab_{2} = [B, A, A, A, C, C, B, A, C, C]$ $\times$
                 $ Ab_{3} = [C, A, A, C, B, A, B, A, C, C]$ \checkmark \\\vspace{0.25em}
-     		}
+            }
             
             \only<8>{
-            	$ Ag = [1, 0, 0, 0, 1, 1, 1, 0, 1, 0]$\\\vspace{0.5em}
+                $ Ag = [1, 0, 0, 0, 1, 1, 1, 0, 1, 0]$\\\vspace{0.5em}
                 $ Ab = [1, 0, 1, 0, 1, 0, 1, 0, 1, 0]$\\\vspace{0.5em}
                 $Match(Ab, Ag): [0, 0, 1, 0, 0, 1, 0, 0, 0, 0]$\\\vspace{1em}
                 $Complementarity: D(Ab, Ag) = \sum Match$  (Affinity = 2)\\\vspace{0.5em}
@@ -401,62 +401,62 @@
             }
             
             \only<9>{
-            	$ Ag = [1, 0, 0, 0, 1, 1, 1, 0, 1, 0]$\\\vspace{0.5em}
+                $ Ag = [1, 0, 0, 0, 1, 1, 1, 0, 1, 0]$\\\vspace{0.5em}
                 $ Ab = [0, 1, 1, 1, 0, 1, 0, 1, 0, 1]$\\\vspace{0.5em}
                 $Match(Ab, Ag): [1, 1, 1, 1, 1, 0, 1, 1, 1, 1]$\\\vspace{1em}
                 $Complementarity: D(Ab, Ag) = \sum Match$  (Affinity = 9)\\\vspace{0.5em}
                 $Similarity: Length - D(Ab, Ag) = 10 - 8$ (Affinity = 1)
             }
-		\end{frame}
-		
-		\begin{frame}{Affinity Threshold}
-		    \textbf{But wait!}
-		
-		    \begin{itemize}
-		        \item Not any match is a match!
-		        \item 20\% match is as good as nothing.
-		        \item ``That tiger looks 20\% like a cat. A bit too big, though...''
-		        \item How do we define a good match?
-		        \pause
-		        \item By establishing a \textbf{threshold}!
-		    \end{itemize}
-		\end{frame}
-		
-		\begin{frame}{Summarising}
-		    \begin{itemize}
-		        \item So we have antibodies and antigens;
-		        \item And they can match their shapes;
-		        \item But what if our antibodies don't reach the threshold?
-		    \end{itemize}
-		\end{frame}
+        \end{frame}
         
-		\begin{frame}{Adaptation}
-		    \textbf{Adaptation} is the key to the immune system's power in fending off invaders.
-		
-		    \begin{itemize}
-		        \item Immune cells need to learn new patterns;
-		        \item Good antibodies should be maintained;
-		        \item Bad antibodies should be replaced;
-		        \item Everyone should mutate! (But there's a catch!)
-		    \end{itemize}
-		\end{frame}
-		
-		\begin{frame}{Adaptation}
-		    There are many theories about the immune system:
-		    
-		    \begin{itemize}
-		        \item Classical View (``Static theories'')
-		        \begin{itemize}
-    		        \item Negative Selection: ``Kill that which is `self-aware'.''
-    		        \item Clonal Selection: ``That which is good, should be maintained. That which is not, should not.''
-    		    \end{itemize}
-    		    \pause
-		        \item Immune Networks: ``Immune cells are not as lazy as you think!''
-		        \pause
-		        \item Danger Theory: ``The important thing is not who is who, but if `who' is bad.''
-		    \end{itemize}
-		\end{frame}
-			
+        \begin{frame}{Affinity Threshold}
+            \textbf{But wait!}
+        
+            \begin{itemize}
+                \item Not any match is a match!
+                \item 20\% match is as good as nothing.
+                \item ``That tiger looks 20\% like a cat. A bit too big, though...''
+                \item How do we define a good match?
+                \pause
+                \item By establishing a \textbf{threshold}!
+            \end{itemize}
+        \end{frame}
+        
+        \begin{frame}{Summarising}
+            \begin{itemize}
+                \item So we have antibodies and antigens;
+                \item And they can match their shapes;
+                \item But what if our antibodies don't reach the threshold?
+            \end{itemize}
+        \end{frame}
+        
+        \begin{frame}{Adaptation}
+            \textbf{Adaptation} is the key to the immune system's power in fending off invaders.
+        
+            \begin{itemize}
+                \item Immune cells need to learn new patterns;
+                \item Good antibodies should be maintained;
+                \item Bad antibodies should be replaced;
+                \item Everyone should mutate! (But there's a catch!)
+            \end{itemize}
+        \end{frame}
+        
+        \begin{frame}{Adaptation}
+            There are many theories about the immune system:
+            
+            \begin{itemize}
+                \item Classical View (``Static theories'')
+                \begin{itemize}
+                    \item Negative Selection: ``Kill that which is `self-aware'.''
+                    \item Clonal Selection: ``That which is good, should be maintained. That which is not, should not.''
+                \end{itemize}
+                \pause
+                \item Immune Networks: ``Immune cells are not as lazy as you think!''
+                \pause
+                \item Danger Theory: ``The important thing is not who is who, but if `who' is bad.''
+            \end{itemize}
+        \end{frame}
+            
         \introframe{Artificial Immune Systems}{In-depth Theories and Algorithms}
 
         \begin{frame}{Immune Algorithms}
@@ -501,7 +501,7 @@
                 }
                 \textbf{return} $\vec{A}$\\
                 
-                \label{alg:three}	
+                \label{alg:three}   
                 \caption{Gene library generation pseudo-code.}
                 \end{algorithm}}}
                 
@@ -753,16 +753,18 @@
     \end{frame}
     
     \begin{frame}{Extra: Danger Theory}
-		\begin{itemize}
-		    \item Molecules don't distinguish \textit{self} from \textit{non-self};
+        \begin{itemize}
+            \item Molecules don't distinguish \textit{self} from \textit{non-self};
             \item Stressed or damaged cells and tissues emit danger signals;
-	        \item Antibodies pick up on those signals and initiate immune responses;
-	        \item Danger Theory explains some facts about immunology, like tumours, auto-immune responses and beneficial bacteria found within our bodies.
-	    \end{itemize}
-	\end{frame}
-	
-    \begin{frame}
-    	TODO: Set-up References
+            \item Antibodies pick up on those signals and initiate immune responses;
+            \item Danger Theory explains some facts about immunology, like tumours, auto-immune responses and beneficial bacteria found within our bodies.
+        \end{itemize}
+    \end{frame}
+    
+    \begin{frame}{References}
+        \bibliographystyle{ieeetr}
+        \bibliography{bibliography}
+        \nocite{*}
     \end{frame}     
             
     \introframe{Challenge:\\ \hfill \Large{A Movie Recommender System}}{ 
