--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -81,15 +81,15 @@
         
         \begin{frame}{Artificial Immune Systems}
             \only<1>{\textbf{How can we apply AIS?}}
-            \only<2>{\textbf{It even reaches outside Computer Science.}}
+%            \only<2>{\textbf{It even reaches outside Computer Science.}}
             \begin{itemize}
                 \only<1>{\item We use the Immune System as a metaphor to solve problems;
                 \item There are many theories behind the Immune System;
                 \item Depending on the theory, different applications may ensue, \textit{e.g.} Information Security, Anomaly Detection, Pattern Recognition, Data Mining, Machine Learning.}
-                \only<2>{
-                    \item We use the immune system as a metaphor to solve problems.
-                    \item Computer Engineers try to reproduce the immune system for computer security.
-                    \item Immunologists use computational models and mathematics to understand how the immune system works.}
+%                \only<2>{
+%                    \item We use the immune system as a metaphor to solve problems.
+%                    \item Computer Engineers try to reproduce the immune system for computer security.
+%                    \item Immunologists use computational models and mathematics to understand how the immune system works.}
             \end{itemize}
         \end{frame}
     
